--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,5 +2,5 @@
   display: grid;
   column-gap: 14px;
   row-gap: 14px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
