--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,22 +27,12 @@ $colors: 50, 100, 200, 300, 400, 500, 600, 700, 800, 900;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-app-root{
-
-  min-height: 100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+  color: var(--primary-color-900);
 }
 
 body {
   font-family: 'Poetsen One', sans-serif;
   color: var(--primary-color-900);
-}
-
-main {
-  margin-top: 40px;
 }
 
 button {
@@ -53,6 +43,9 @@ button {
   padding: 0 10px;
   border: solid 1px var(--primary-color-800);
   transition: 0.3s;
+  i{
+    color: white;
+  }
 }
 
 button:hover {
